# 3d-visualization-prototype

./: .gitignore  3d-visualization-plan.md  CMakeLists.txt  CMakePresets.json  README.md  agent.md  vcpkg.json
docs/: msvc-migration.md
samples/: load_data.csv  loading_points.json  sensors.json  solid.step  specimen.stl
scripts/: build_windows.ps1  check_msvc_dependencies.ps1  check_netgen.ps1  configure_msvc_vcpkg.ps1  deploy_msys2_runtime.ps1  download_netgen_windows.ps1  netgen_mesh_step.py  run_windows.ps1
src/: ConstraintFaceGroup.h  LoadingDevice.h  MainWindow.cpp  MainWindow.h  MainWindowCalculix.cpp  MainWindowConstraintFaces.cpp  MainWindowContour.cpp  MainWindowLoadingDevices.cpp  MainWindowModel.cpp  MainWindowPicking.cpp  MainWindowProject.cpp  MainWindowVolumeMesh.cpp  NetgenStepMeshSmoke.cpp  NetgenVolumeMesher.cpp  NetgenVolumeMesher.h  Sensor.h  VolumeMesh.h  main.cpp
tools/: step_probe.cpp
vcpkg-overlays/ports/vtk/: portfile.cmake  vcpkg.json
